Fixed the alignment of the info image and text on the admin page. Issue 875.

--- a/trunk/gbif-ipt/src/main/webapp/styles/main.css
+++ b/trunk/gbif-ipt/src/main/webapp/styles/main.css
@@ -774,10 +774,15 @@ div.groupmenu ul li a:hover {
 /* Administration */
 
 table#admintable td {
-vertical-align:middle;
+  vertical-align:middle;
 }
 table#admintable td img.infoImg {
-  margin-top: 35px;
+  top: -2px;
+  left: 5px;
+  vertical-align: middle;
+}
+input#updateResourceMetadata_do_updateMetadata.button {
+  margin-top: 8px;
   margin-left: 5px;
 }
 table#admintable tr {
